<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/add_activity_margin"
    android:layout_marginEnd="@dimen/add_activity_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.add.AddMeetingActivity">

    <EditText
        android:id="@+id/meeting_subject_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/selection_date_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/meeting_subject"
        android:autofillHints="@string/meeting_subject"
        android:inputType="text" />

    <TextView
        android:id="@+id/selection_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:text="@string/date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/meeting_subject_edittext"
        app:layout_constraintStart_toStartOf="@id/meeting_subject_edittext"
        app:layout_constraintEnd_toStartOf="@+id/date_textview"
        app:layout_constraintBottom_toTopOf="@+id/selection_time_textview"
        />

    <TextView
        android:id="@+id/date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:hint="@string/date_meeting"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/selection_date_textview"
        app:layout_constraintTop_toTopOf="@id/selection_date_textview"
        app:layout_constraintBottom_toBottomOf="@id/selection_date_textview"
        />


    <TextView
        android:id="@+id/selection_time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meeting_begin"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="14dp"
        app:layout_constraintStart_toStartOf="@id/meeting_subject_edittext"
        app:layout_constraintTop_toBottomOf="@id/selection_date_textview"
        app:layout_constraintEnd_toStartOf="@id/beginning_meeting_time_textview"
        />

    <TextView
        android:id="@+id/beginning_meeting_time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:textSize="18sp"
        android:clickable="true"
        android:textStyle="italic"
        android:hint="@string/beginning_time_hint"
        app:layout_constraintStart_toEndOf="@id/selection_time_textview"
        app:layout_constraintTop_toTopOf="@id/selection_time_textview"
        app:layout_constraintBottom_toBottomOf="@id/selection_time_textview"
        android:focusable="true" />

    <TextView
        android:id="@+id/beginning_textview"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:hint="@string/beginning_time_hint_selection"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/selection_time_textview"
        app:layout_constraintTop_toTopOf="@id/selection_time_textview"
        app:layout_constraintBottom_toBottomOf="@id/selection_time_textview"
        />


    <TextView
        android:id="@+id/selection_end_time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ending_time_textview"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="14dp"
        app:layout_constraintStart_toStartOf="@id/meeting_subject_edittext"
        app:layout_constraintTop_toBottomOf="@id/selection_time_textview"
        app:layout_constraintEnd_toStartOf="@id/ending_meeting_time_textview"
        />

    <TextView
        android:id="@+id/ending_meeting_time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:hint="@string/ending_time_hint"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/selection_time_textview"
        app:layout_constraintTop_toTopOf="@id/selection_end_time_textview"
        app:layout_constraintBottom_toBottomOf="@id/selection_end_time_textview"
        />

    <Spinner
        android:id="@+id/room_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        app:layout_constraintStart_toStartOf="@id/meeting_subject_edittext"
        app:layout_constraintTop_toBottomOf="@id/selection_end_time_textview"
        app:layout_constraintBottom_toTopOf="@id/add_email_edittext"

        />

    <EditText
        android:id="@+id/add_email_edittext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/add_email_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/room_spinner"
        app:layout_constraintBottom_toTopOf="@id/list_view_email"
        android:inputType="textEmailAddress"
        android:hint="@string/email_model"
        android:autofillHints="@string/email_model" />

    <ImageView
        android:id="@+id/add_email_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/email_add_vec"
        app:layout_constraintStart_toEndOf="@id/add_email_edittext"
        app:layout_constraintTop_toTopOf="@id/add_email_edittext"
        app:layout_constraintBottom_toBottomOf="@id/add_email_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/email_add" />

    <TextView
        android:id="@+id/list_view_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/add_email_image"
        app:layout_constraintStart_toStartOf="@id/meeting_subject_edittext"
        app:layout_constraintBottom_toTopOf="@id/validate_meeting_btn"
        />


    <Button
        android:id="@+id/validate_meeting_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:enabled="false"
        android:text="@string/creation_meeting"
        app:layout_constraintStart_toStartOf="@id/meeting_subject_edittext"
        app:layout_constraintTop_toBottomOf="@id/list_view_email"
        />

</androidx.constraintlayout.widget.ConstraintLayout>