<resources>
    <string name="app_name">Ma reu</string>
    <string name="select_time">Selectionner une date</string>
    <string name="meeting_date">Date de la réunion: %d/%d/%d</string>
    <string name="meeting_start_time">Début de la réunion: %dH%d</string>
    <string name="meeting_end_time">Fin de la réunion: %dH%d</string>
    <string name="meeting_title">%s-%s-%s</string>
    <string name="entrer_date">entrer date</string>
    <string name="selection_date">Selection Date :</string>
    <string name="rooms">Salles</string>
    <string name="rooms_not_available">La salle de meeting n\'est pas disponible à ces horraires</string>
    <string-array name="meeting_room_list">
        <item>Room A</item>
        <item>Room B</item>
        <item>Room C</item>
        <item>Room D</item>
        <item>Room E</item>
        <item>Room F</item>
        <item>Room G</item>
        <item>Room H</item>
        <item>Room I</item>
        <item>Room J</item>
    </string-array>
    <string name="menu_filter_by_date">Filtrer par date</string>
    <string name="menu_filter_by_room">Filtrer par salle</string>
    <string name="menu_filter_reset">Reinitialiser</string>
    <string name="meeting_subject">Sujet du meeting</string>
    <string name="date">Date :</string>
    <string name="meeting_begin">Début réunion :</string>
    <string name="beginning_time_hint">heure début</string>
    <string name="beginning_time_hint_selection">heure début</string>
    <string name="ending_time_textview">Fin réunion :</string>
    <string name="ending_time_hint">heure de fin</string>
    <string name="email_model">exemple@email.com</string>
    <string name="creation_meeting">Creation meeting</string>
    <string name="date_meeting">date meeting</string>
    <string name="email_add">email_add</string>
    <string name="date">Date :</string>
    <string name="beginning_time_details">Heure de début :</string>
    <string name="ending_time_details">Heure de fin :</string>
    <string name="room_details">Salle :</string>
    <string name="emails_textview">Emails :</string>
    <string name="floating_btn">floating_btn</string>
    <string name="meeting_img">meeting_img</string>
    <string name="delete_btn">delete_btn</string>

</resources>